# Download-Manager

./: CMakeLists.txt  to_auto_build.sh
include/: App.h  Constants.h
include/Common/: CommonHeaders.h  CurlCallbacks.h  EventIDs.h
include/Database/: DatabaseManager.h
include/Managers/: DownloadManager.h  YouTubeDownloader.h
include/Models/: AppSettings.h  DownloadItem.h
include/UI/: DownloadDialog.h  MainFrame.h  SettingsDialog.h  SpeedLimitDialog.h  YouTubeDialog.h  YouTubeDownloadDialog.h
include/Utils/: CurlCallbacks.h  FileUtils.h
src/: App.cpp  main.cpp
src/Common/: CurlCallbacks.cpp  EventIDs.cpp
src/Database/: DatabaseManager.cpp
src/Managers/: DownloadManager.cpp  YouTubeDownloader.cpp
src/Models/: AppSettings.cpp  AppSettings.h  DownloadItem.cpp
src/UI/: DownloadDialog.cpp  MainFrame.cpp  SettingsDialog.cpp  SpeedLimitDialog.cpp  YouTubeDialog.cpp  YouTubeDownloadDialog.cpp
src/Utils/: CurlCallbacks.cpp  FileUtils.cpp
